# toolkit

./: .env.example  .gitignore  Add_Bookmarks.py  Makefile  README.md  REMUX_processor.py  add_bookmarks.py  conduct_design_album.py  environment.yml  fetch_magnet.py  gen_magnet.py  get_magnet.py  md2_word_and_pdf.py  move_files.py  pdf_conductor.py  purge_folder.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Archive/: add_bookmarks.py  fetch_pdf.py  pdf_conductor.py  purge_folder.py  simkl_exporter.py  word2pdf.py
Main/: move_files.py
ToolFunc/: colloctor.py  fetchor.py
backend/: .env.example  .gitignore  pyproject.toml
backend/src/subgen/: config.py  core.py  db.py  netutil.py  subserver.py
backend/src/toolkit_api/: __init__.py  artifacts.py  auth.py  deps.py  host.py  jobs.py  main.py  schemas.py  state.py  torrents.py  uploads.py
backend/src/toolkit_api/routers/: __init__.py  depsync.py  docmd.py  docpdf.py  fs.py  gather.py  imgpdf.py  jobs.py  magnet.py  meta.py  purge.py  remux.py  subs.py  torrent.py  webpdf.py
backend/src/toolkit_engine/: __init__.py  aria2.py  depsync.py  docmd.py  docpdf.py  filetypes.py  fsutil.py  gather.py  imgpdf.py  magnet.py  picker.py  purge.py  remux.py  torrent.py  torrentdb.py  webpdf.py
backend/tests/: conftest.py  fake_aria2.py  test_api_core.py  test_auth.py  test_deps.py  test_doc_tools.py  test_gather_purge.py  test_helpers.py  test_host.py  test_magnet.py  test_pdf_tools.py  test_remux.py  test_subgen_core.py  test_subs.py  test_torrent_api.py  test_torrent_engine.py  test_torrent_store.py
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.js
frontend/src/: Home.jsx  Home.tsx  JobsProvider.tsx  Layout.jsx  Layout.tsx  api.js  api.test.js  api.test.ts  api.ts  jobs.jsx  jobs.ts  jobs.tsx  main.jsx  main.tsx  styles.css  test-setup.js  theme.js  theme.ts  tools.js  tools.ts  torrent.test.ts  torrent.ts
frontend/src/components/: AuthGate.jsx  Button.jsx  Button.tsx  CodeBox.jsx  CodeBox.tsx  ErrorBoundary.jsx  ErrorBoundary.tsx  FileDrop.jsx  FileDrop.tsx  FolderField.jsx  FolderField.tsx  JobPanel.jsx  JobPanel.tsx  ThemeToggle.jsx  ThemeToggle.tsx
frontend/src/pages/: CachePurge.jsx  CachePurge.tsx  DepUpgrade.jsx  DepUpgrade.tsx  DocToMarkdown.jsx  DocToMarkdown.tsx  DocToPdf.jsx  DocToPdf.tsx  FileGatherer.jsx  FileGatherer.tsx  ImageToPdf.jsx  ImageToPdf.tsx  MagnetScraper.jsx  MagnetScraper.tsx  Remux.jsx  Remux.tsx  Subscription.jsx  Subscription.tsx  TorrentDownloader.tsx  WebImagesToPdf.jsx  WebImagesToPdf.tsx
frontend/src/types/: api.ts
src/: app.py  home.py
src/lib/: __init__.py  folder_picker.py
src/lib/subgen/: __init__.py  config.py  core.py  db.py
src/pages/: cache_purge.py  doc_to_markdown.py  doc_to_pdf.py  file_gatherer.py  img_to_pdf.py  magnet_scraper.py  optimized_ip_generator.py  remux_processor.py  web_images_to_pdf.py
tests/: conftest.py  test_helpers.py
toolkit/: fetch_magnet.py  fetch_magnet_app.py  img2pdf_convertor_app.py  move_files.py  pdf_conductor.py  remux_processor.py
toolkit/Archive/: add_bookmarks.py  flowrate.py
toolkit/ToolFunc/: colloctor.py  fetchor.py
toolkit/archive/: add_bookmarks.py  fetch_pdf.py  md2_word_and_pdf.py  pdf_conductor.py  purge_folder.py  simkl_exporter.py  word2pdf.py  word_to_pdf.py
toolkit/tool_function/: convertor.py
