[project]
name = "toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "ffmpeg-progress-yield>=1.1.3",
    "ffmpeg-python>=0.2.0",
    "pillow>=12.2.0",
    "requests>=2.34.2",
    "scandir-rs>=2.9.9",
    "streamlit>=1.58.0",
]
