[project]
name = "toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "dotenv>=0.9.9",
    "ffmpeg-progress-yield>=1.1.3",
    "ffmpeg-python>=0.2.0",
    "pillow>=12.2.0",
    "requests>=2.34.2",
    "scandir-rs>=2.9.9",
    "streamlit>=1.58.0",
    "watchdog>=6.0.0",
]

[tool.ruff]
# Target specific Python version
target-version = "py311"
# Set line length limit
line-length = 88

[tool.ruff.lint]
# Enable rules: E (pycodestyle), F (Pyflakes), B (flake8-bugbear), I (isort)
select = ["E", "F", "B", "I"]
# Optional: Specify rules you want to ignore
ignore = []

[tool.ruff.format]
# Configure stylistic choices to match your team's code formatting preferences
quote-style = "double"
indent-style = "space"
