[project]
name = "toolkit"
version = "0.1.0"
description = "A local Streamlit app bundling small media & file utilities (magnet scraping, image-to-PDF, video remux, file gathering)."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "dotenv>=0.9.9",
    "ffmpeg-progress-yield>=1.1.3",
    "ffmpeg-python>=0.2.0",
    "lxml>=6.1.1",
    "mineru[core]>=3.4.0",
    "pillow>=12.2.0",
    "pillow-heif>=1.4.0",
    "pymupdf>=1.27.2.3",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scandir-rs>=2.9.9",
    "segno>=1.6.6",
    "selenium>=4.45.0",
    "streamlit>=1.58.0",
    "watchdog>=6.0.0",
    "webdriver-manager>=4.1.2",
]

# This project is a runnable Streamlit app, not an importable package.
[tool.uv]
package = false

[tool.ruff]
# Target specific Python version
target-version = "py314"
# Set line length limit
line-length = 88

[tool.ruff.lint]
# Enable rules: E (pycodestyle), F (Pyflakes), B (flake8-bugbear), I (isort)
select = ["E", "F", "B", "I"]
# Optional: Specify rules you want to ignore
ignore = []

[tool.ruff.format]
# Configure stylistic choices to match your team's code formatting preferences
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
