[project]
name = "toolkit-backend"
version = "0.1.0"
description = "FastAPI backend for Toolkit — media & file utilities engine + web API."
requires-python = ">=3.14"
dependencies = [
    # --- web layer ---
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "python-dotenv>=1.0",
    # --- engine (carried over from the Streamlit app) ---
    "beautifulsoup4>=4.15.0",
    "ffmpeg-progress-yield>=1.1.3",
    "ffmpeg-python>=0.2.0",
    "lxml>=6.1.1",
    "packaging>=25.0",
    "pillow>=12.2.0",
    "pillow-heif>=1.4.0",
    "pymupdf>=1.27.2.3",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scandir-rs>=2.9.9",
    "segno>=1.6.6",
    "selenium>=4.45.0",
    "webdriver-manager>=4.1.2",
]

# Doc→Markdown pulls MinerU's ML stack (torch/transformers, ~1 GB). It's the
# only tool that needs it, so it lives in an optional extra: `make install`
# includes it, but a lean install (`uv sync`) and CI skip it, and the tool
# reports "MinerU not installed" gracefully when it's absent.
[project.optional-dependencies]
docmd = ["mineru[core]>=3.4.0"]

# ruff is DECLARED here on purpose: undeclared, `uv run ruff` silently falls back to whatever
# ruff is on PATH, so two machines lint identical code to different results. httpx2 backs the
# fastapi TestClient in tests.
[dependency-groups]
dev = ["pytest>=9.1.1", "httpx2>=2.7.0", "ruff>=0.15.20"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# `src/` is the source root: the lifted subgen engine, the extracted toolkit_engine modules,
# and the toolkit_api web layer. `sources = ["src"]` strips the prefix so all three install at
# the wheel root and import cleanly.
[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/subgen", "src/toolkit_engine", "src/toolkit_api"]

[tool.uv]
package = true

# One command runs the whole suite: `uv run pytest` (from backend/). Warnings are errors so new
# code can't introduce a deprecation unnoticed; add narrow, message-pinned ignores only for
# third-party deprecations already fixed upstream.
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

# The PEP 8 gate. line-length 88 is this repo's existing convention (the engine already passes
# it). It stays at [tool.ruff] top level, where both the linter and the formatter read it.
[tool.ruff]
line-length = 88
target-version = "py314"

# `preview = true` is what makes E1xx/E2xx/E3xx (the classic PEP 8 body) actually fire — the
# family shorthand `select = ["E"]` is a silent no-op for those without it.
# E/W/F/B/I were the old repo's selection (the lifted engine is already clean under them);
# W and N complete the PEP 8 gate for the new code.
[tool.ruff.lint]
preview = true
select = ["E", "W", "F", "N", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
