[project]
name = "toolkit-backend"
version = "0.1.0"
description = "FastAPI backend for Toolkit — media & file utilities engine + web API."
requires-python = ">=3.14"
dependencies = [
    # --- web layer ---
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "python-multipart>=0.0.32",
    "sse-starlette>=3.4.6",
    "python-dotenv>=1.2.2",
    "beautifulsoup4>=4.15.0",
    "ffmpeg-progress-yield>=1.1.3",
    "ffmpeg-python>=0.2.0",
    "lxml>=6.1.1",
    "packaging>=26.2",
    "pillow>=12.3.0",
    "pillow-heif>=1.4.0",
    "pymupdf>=1.28.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scandir-rs>=2.9.9",
    "segno>=1.6.6",
    "selenium>=4.46.0",
    "webdriver-manager>=4.1.2",
]

# MinerU's ML stack is ~1 GB and only Doc→Markdown needs it, so it stays optional:
# `make install` includes it, a lean `uv sync` skips it, and the tool reports
# "MinerU not installed" rather than failing.
[project.optional-dependencies]
docmd = ["mineru[core]>=3.4.4"]

# ruff is declared, not taken from PATH, so two machines lint identically.
[dependency-groups]
dev = ["pytest>=9.1.1", "httpx2>=2.7.0", "ruff>=0.15.22"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# `sources = ["src"]` strips the prefix so all three packages land at the wheel root.
[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/subgen", "src/toolkit_engine", "src/toolkit_api"]

[tool.uv]
package = true

# Warnings are errors, so a new deprecation can't slip in unnoticed.
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
line-length = 88
target-version = "py314"

# `preview` is what makes E1xx/E2xx/E3xx fire — without it `select = ["E"]`
# silently matches none of them.
[tool.ruff.lint]
preview = true
select = ["E", "W", "F", "N", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
